# GraphOne

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  gcn.cu  pagerank_blas.cu  pr.cu  sm.cu  sssp.cu  sssp_adv.cu  sssp_blas.cu  sssp_blas2.cu
data/bfs_test/: bfs_test.adj
data/sample/: sample_more.feat  sample_single.feat
include/GraphGenlX/: DataLoader.h  DataLoader.hpp  archi.h  buffer.h  domain.h  graph_genlx.h  type.hpp  utils.h  utils.hpp
include/GraphGenlX/arch/: arch.hpp  cpu.hpp  cuda.cuh
include/GraphGenlX/archi/: archi.h  archi.hpp  cpu.hpp  cuda.cuh  def.hpp
include/GraphGenlX/archi/blas/SpMV/: def.hpp  spmv.h
include/GraphGenlX/archi/blas/SpMV/cpu/: cpu.hpp  naive.hpp
include/GraphGenlX/archi/blas/SpMV/cuda/: csr_vector.cuh  cuda.cuh
include/GraphGenlX/archi/blas/SpMV/cuda/merge_based/: agent_segment_fixup.cuh  agent_spmv_orig.cuh  merge_based_spmv.cuh  thread_search.cuh
include/GraphGenlX/archi/check/: check.h  cuda.cuh  thrust.hpp
include/GraphGenlX/archi/kernel/: cuda.cuh  def.hpp  kernel.h
include/GraphGenlX/archi/macro/: cuda.cuh  macro.h
include/GraphGenlX/archi/mem/: cpu.hpp  cuda.cuh  def.hpp  mem.h
include/GraphGenlX/archi/only/: cuda.cuh  only.h
include/GraphGenlX/archi/thrust/: cpu.hpp  cuda.cuh  def.hpp  functions.h  thrust.h
include/GraphGenlX/base/: buffer.h  component.h  run.h
include/GraphGenlX/debug/: backtrace.hpp
include/GraphGenlX/domain/: gnn.h
include/GraphGenlX/engine/: advance_gc.h  base.h  blas_gc.h
include/GraphGenlX/frontier/: active_frontier.h  base.h  double_buffer_frontier.h
include/GraphGenlX/graph/: arch_ref.h  builder.h  graph.h  graph_view.hpp
include/GraphGenlX/loader/: edge_cache.h  loader.h  opts.hpp
include/GraphGenlX/mat/: builder.h  convert.h  coo.h  coo.hpp  csc.h  csr.h  dense.h
include/GraphGenlX/mem/: cpu.hpp  cuda.cuh  mem.hpp
include/GraphGenlX/utils/: cli.hpp  cuda.cuh  limits.h  limits.hpp  log.hpp  string.h  string.hpp  string_arch.h
include/GraphGenlX/vec/: DenseVec.hpp  dense.h  vector.cuh
include/GraphOne/: archi.h  domain.h  graph_one.h  type.hpp  utils.h
include/GraphOne/archi/: archi.h
include/GraphOne/archi/blas/: blas.h
include/GraphOne/archi/blas/SpMV/: def.hpp  spmv.h
include/GraphOne/archi/blas/SpMV/cpu/: cpu.hpp  naive.hpp
include/GraphOne/archi/blas/SpMV/cuda/: cuda.cuh
include/GraphOne/archi/blas/SpMV/cuda/merge_based/: agent_segment_fixup.cuh  agent_spmv_orig.cuh  merge_based_spmv.cuh
include/GraphOne/archi/blas/gemm/: def.hpp  gemm.h
include/GraphOne/archi/blas/gemm/cuda/: cuda.cuh
include/GraphOne/archi/blas/spmm/: def.hpp  spmm.h
include/GraphOne/archi/blas/spmm/cuda/: cuda.cuh
include/GraphOne/archi/blas/spmv/: def.hpp  spmv.h
include/GraphOne/archi/blas/spmv/cpu/: cpu.hpp
include/GraphOne/archi/blas/spmv/cuda/: csr_vector.cuh  cuda.cuh
include/GraphOne/archi/blas/spmv/cuda/merge_based/: agent_segment_fixup.cuh  agent_spmv_orig.cuh  merge_based_spmv.cuh  thread_search.cuh
include/GraphOne/archi/check/: check.h  cuda.cuh  thrust.hpp
include/GraphOne/archi/kernel/: cuda.cuh  def.hpp  kernel.h
include/GraphOne/archi/macro/: cuda.cuh  macro.h
include/GraphOne/archi/mem/: cpu.hpp  cuda.cuh  def.hpp  mem.h
include/GraphOne/archi/only/: cuda.cuh  only.h
include/GraphOne/archi/thrust/: cpu.hpp  cuda.cuh  def.hpp  functions.h  thrust.h
include/GraphOne/base/: buffer.h  component.h  run.h
include/GraphOne/debug/: backtrace.hpp  debug.hpp
include/GraphOne/domain/: gnn.h
include/GraphOne/domain/gnn/: build.h  component.h  module.h  status.h  tensor.h  vprop.h
include/GraphOne/engine/: advance_gc.h  base.h  blas_gc.h  blas_gnn.h
include/GraphOne/frontier/: all_active.h  base.h  dense.h  dense_dbl.h  double_buffer_frontier.h  gnn_frontier.h  sparse_dbl.h
include/GraphOne/gnn/: build.h  module.h  module_holder.h  tensor.h
include/GraphOne/graph/: arch_ref.h  builder.h  graph.h  graph_arch_ref.h  graph_view.hpp
include/GraphOne/loader/: edge_cache.h  graph_loader.h  loader.h  onnx_loader.h  opts.hpp
include/GraphOne/mat/: convert.h  coo.h  csc.h  csr.h  dense.h
include/GraphOne/utils/: cli.hpp  limits.hpp  log.hpp  refl.hpp  string.hpp  string_arch.h
include/GraphOne/vec/: dense.h
include/graph_one/: applier.hpp  forward.h  forward.hpp  functor.hpp  graph.hpp  graph_one.h  load.hpp  log.hpp  operator.cuh  torch_utils.hpp  types.hpp
include/graph_one/blas/spmv/: gspmv.h
include/graph_one/blas/spmv/gspmv_csr/: agent_segment_fixup.cuh  agent_spmv_orig.cuh  device_spmv.cuh  dispatch_spmv_orig.cuh  merge_genl.cuh  thread_search.cuh
libtorch/: CMakeLists.txt  gcn.cu  graph_engine.cu  load_data.hpp  sparse_tensor.cpp  spmm.cuh
models/gcn/: gcn.json  gcn.onnx
test/: Buffer_test.cu  CMakeLists.txt  DataLoader_test.cpp  DataLoader_test.cu  buffer_test.cu  gemm_test.cu  graph_test.cu  json_model_test.cpp  loader_test.cpp  mat_builder_test.cu  module_test.cpp  onnx_model_test.cpp  onnx_test.cpp  refl_test.cpp  spmm_cusparse_test.cu  spmv_test.cu  test.hpp  thrust_test.cu
